[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "easyst"
version = "0.0.1"
authors = [
  { name="Xiaonan Zhao", email="zhaoxxn@gmail.com" },
]
description = "A small package for easy streamlit app"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "streamlit",
]
